# ghostty-themer

./: .gitignore  CLAUDE.md  Cargo.toml  EXAMPLES.md  README.md
product-definition/: PRD-1.md  PRD-2.md  TICKETS-1.md  TICKETS-2.md  TICKETS.md
src/: cli.rs  color.rs  lib.rs  main.rs  preview.rs  theme.rs
src/backends/: ghostty.rs  mod.rs  neovim.rs  zellij.rs
src/pipeline/: assign.rs  extract.rs
src/tui/: mod.rs
tests/: integration.rs
tests/snapshots/: colorful_png.snap  dark-photo_png.snap  light-photo_png.snap  monochrome_png.snap
