[package]
name = "nuri"
version = "0.2.0"
edition = "2021"
description = "Generate terminal, multiplexer, and editor color themes from wallpaper images"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
image = "0.25"
kmeans_colors = { version = "0.6", features = ["palette_color"] }
palette = "0.7"
ratatui = "0.29"

[dev-dependencies]
proptest = "1"
regex = "1"
